# github_actions_pract04

./: README.md  pyproject.toml
.github/workflows/: python-publish.yaml  python-publish.yml
app/: __init__.py  pyproject.toml  requirements.txt
app/app/: main.py
