[tool.poetry]
name = "app-api"
version = "0.1.0"
description = "A simple ex of py api"
authors = ["OSX-RSPlug-a <log-n@outlook.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
