[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["OSX-RSPlug-a <log-n@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standart"], version = "^0.115.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
